# nego

./: .env  CLIENT_APP_CONCEPT_AND_SECURITY.md  README.md  alembic.ini  backuptest.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_multi_tenant.py  0002_corpus_management.py  0003_client_scoping.py
app/: config.py  main.py  security.py
app/api/: audit_routes.py  auth_routes.py  corpus_routes.py  deps.py  routes.py
app/db/: models.py  session.py
app/ml/: acceptance_model.py  evaluate_llm_pipeline.py
app/schemas/: audit.py  auth.py  contracts.py  corpus.py
app/services/: audit_service.py  auth_service.py  clause_intelligence.py  corpus_parser.py  corpus_service.py  document_service.py  llm_provider.py  pattern_mining.py  profile_service.py  redline_editor.py  retrieval.py  strategy_engine.py  vector_store.py
docs/: BIR (D) - Shortcut.lnk  XYZ Inc._GTA_198_2020_05_28.docx  XYZ Inc._GTA_198_2020_07_14 (A+Z redline) 7-15-20.docx
docs/XYZ Inc/: 30501 XYZ Inc. Conversion GTA.01.03 XYZ Inc. (A+Z clean + comments) 7-1-20.docx  30501 XYZ Inc. Conversion GTA.01.03 XYZ Inc. (A+Z redline) 7-1-20.docx  30501 XYZ Inc. Conversion GTA.01.03 XYZ Inc..docx  BZ + XYZ Inc._30501 XYZ Inc. Conversion GTA.02.02 XYZ Inc..docx  XYZ Inc._30501 XYZ Inc. Conversion GTA.01.03 XYZ Inc..docx  (+5 more)
multi_tenant_contract_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sql/: 001_multi_tenant_rls.sql  002_corpus_management.sql  003_client_scoping.sql
ui-ionic-angular/: README.md  angular.json  ionic.config.json  package-lock.json  package.json  tsconfig.json
(+23 files in other folders)
