[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-tenant-contract-ai"
version = "0.1.0"
description = "Multi-tenant AI contract negotiation backend"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.1.19",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "qdrant-client>=1.11.0",
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "joblib>=1.4.2",
  "pypdf>=4.3.1",
  "scikit-learn>=1.5.0",
  "sentence-transformers>=3.0.0",
  "xgboost>=2.1.0",
]

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8000

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
include = ["app*"]
